# turboprisma

./: .gitignore  .npmrc  Cargo.toml  LICENSE.md  NOTICE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: deploy.yml
assets/: README.md  package.json
crates/ast/builtin_connectors/: Cargo.toml
crates/ast/diagnostics/: Cargo.toml
crates/ast/diagnostics/src/: collection.rs  error.rs  lib.rs  native_type_error_factory.rs  pretty_print.rs  span.rs  warning.rs
crates/ast/parser_database/: Cargo.toml
crates/ast/psl/: Cargo.toml
crates/ast/psl/src/: lib.rs
crates/ast/psl_core/: Cargo.toml
crates/ast/schema_ast/: Cargo.toml
crates/ast/schema_ast/src/: ast.rs  lib.rs  parser.rs  reformat.rs  renderer.rs  source_file.rs
crates/ast/schema_ast/src/parser/: datamodel.pest  helpers.rs  parse_arguments.rs  parse_attribute.rs  parse_comments.rs  parse_composite_type.rs  parse_enum.rs  parse_expression.rs  parse_field.rs  parse_model.rs  parse_schema.rs  parse_source_and_generator.rs  parse_types.rs  parse_view.rs
crates/ast/schema_ast/src/renderer/: table.rs
crates/format/turboprisma_fmt/: Cargo.toml  schema.prisma
crates/format/turboprisma_fmt/src/: lib.rs  validate.rs
crates/format/turboprisma_fmt_wasm/: Cargo.toml  README.md  package.json
crates/format/turboprisma_fmt_wasm/src/: lib.rs
crates/libs/prisma_value/: Cargo.toml
crates/query_engine/dml/: Cargo.toml
crates/query_engine/dmmf/: Cargo.toml
crates/query_engine/prisma_models/: Cargo.toml
crates/query_engine/schema/: Cargo.toml
crates/query_engine/schema_builder/: Cargo.toml
crates/turboprisma_cli/: Cargo.toml
crates/turboprisma_cli/src/: args.rs  env_parser.rs  main.rs
crates/turboprisma_cli/src/commands/: format.rs  init.rs  mod.rs  validate.rs  version.rs
crates/turboprisma_cli/src/utils/: env.rs  install.rs  mod.rs  schema.rs
crates/turboprisma_vm/: Cargo.toml
crates/turboprisma_vm/src/: main.rs
