[package]
name = "turboprisma_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
tiny-gradient = "0.1.0"
serde_json = "1.0.93"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }