[package]
name = "turboprisma_cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
tiny-gradient = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.93"
turboprisma_fmt = { path = "../format/turboprisma_fmt" }
relative-path = "1.8.0"
regex = "1.7.1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }