[package]
edition = "2021"
name = "psl_core"
version = "0.1.0"

[dependencies]
diagnostics = { path = "../diagnostics" }
parser_database = { path = "../parser_database" }
prisma_value = { path = "../../libs/prisma_value" }
schema_ast = { path = "../schema_ast" }

serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }

bigdecimal = "0.3"
chrono = { version = "0.4.6", default_features = false }
itertools = "0.10"
once_cell = "1.3.1"
regex = "1.3.7"
enumflags2 = "0.7"
indoc = "1"

# For the connector API.
lsp-types = "0.91.1"
url = "2.2.1"
