[package]
name = "turboprisma_fmt"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
dmmf = { path = "../../query_engine/dmmf"}
lsp-types = "0.91.1"
log = "0.4.14"
indoc = "1"
enumflags2 = "0.7"
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
psl = { path = "../../ast/psl" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
structopt = "0.3"

[dev-dependencies]
dissimilar = "1.0.3"
once_cell = "1.9.0"
expect-test = "1"

[features]
# sigh please don't ask :(
vendored-openssl = []
