[package]
name = "turboprisma-fmt-wasm"
description = "Internal package for @turboprisma/sdk."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DavidHancu/turboprisma"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.83"
wasm-logger = { version = "0.2.0", optional = true }
turboprisma_fmt = { path = "../turboprisma_fmt" }
