[package]
edition = "2021"
name = "prisma_value"
version = "0.1.0"

[dependencies]
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.3"
regex = "1.2"
bigdecimal = "0.3"
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }