[package]
name = "dml"
version = "0.1.0"
edition = "2021"

[dependencies]
prisma_value = { path = "../../libs/prisma_value" }
psl_core = { path = "../../ast/psl_core" }

uuid = { version = "1", features = ["serde"] }
cuid = { version = "1.2", optional = true }
nanoid = { version = "0.4.0", optional = true }
chrono = { version = "0.4.6", features = ["serde"] }
enumflags2 = "0.7"
indoc = "1"
either = "1.6"

serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }

[features]
# Support for generating default UUID, CUID, nanoid and datetime values. This
# implies random number generation works, so it won't compile on targets like
# wasm32.
default_generators = ["uuid/v4", "cuid", "nanoid"]
