[package]
name = "schema_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
schema = { path = "../schema" }
prisma_models = { path = "../prisma_models" }
once_cell = "1.3"
psl = { path = "../../ast/psl" }

[dev-dependencies.criterion]
version = "0.4.0"
default-features = false
features = ["cargo_bench_support"]

[[bench]]
name = "schema_builder_bench"
harness = false
